--- a/views/roomlisting.handlebars
+++ b/views/roomlisting.handlebars
@@ -36,51 +36,51 @@
     <h1> Top places to stay in Toronto</h1>
     <section>
     <div>
-        <img src="Images/T1.jpeg">
+        <img src="/images/T1.jpeg">
         <p>Seahell house [Etobicoke]</p>
         <h5>$393 CAD/Night</h5>
     </div>
     <div>
-        <img src="Images/T2.jpeg">
+        <img src="/images/T2.jpeg">
         <p>Romatic Cabine House [DownTown]</p>
         <h5>$293 CAD/Night</h5>
     </div>
     <div>
-        <img src="Images/T3.jpeg">
+        <img src="/images/T3.jpeg">
         <p>New York house [DownTown]</p>
         <h5>$393 CAD/Night</h5>
     </div>
     </section>
     <section>
     <div>
-        <img src="Images/T4.jpg">
+        <img src="/images/T4.jpg">
         <p>Seahell house [Markham]</p>
         <h5>$300 CAD/Night </h5>
     </div>
     <div>
-        <img src="Images/T5.jpg">
+        <img src="/images/T5.jpg">
         <p>Tree house [Etobicoke]</p>
         <h5>$234 CAD/Night</h5>
     </div>
     <div>
-        <img src="Images/T6.jpeg">
+        <img src="/images/T6.jpeg">
         <p>Cottage house [Habourfront Side]</p>
         <h5>$654 CAD/Night </h5>
     </div>
 </section>
 <section>
     <div>
-        <img src="Images/T7.jpeg">
+        <img src="/images/T7.jpeg">
         <p>Mashroom Doom house [vaughan]</p>
         <h5>$234 CAD/Night </h5>
     </div>
     <div>
-        <img src="Images/T8.jpeg">
+        <img src="/images/T8.jpeg">
         <p>Seahell house [DownTown]</p>
         <h5>$134 CAD/Night </h5>
     </div>
     <div>
-        <img src="Images/T2.jpeg">
+        <img src="/images/T2.jpeg">
         <p>Down hall house [Etobicoke]</p>
         <h5>$134 CAD/Night </h5>
     </div>
