--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
             <img src="../img/logo.jpg" class="logo">
         </div> 
         <div> 
-            <a href="roomlisting.html" class="nav">Room Listing</a>
+            <a href="/views/roomlisting.handlebars" class="nav">Room Listing</a>
             <a href="#" class="nav">Product</a>
             <a href="#" class="nav">Gallery</a>
             <a href="#" class="nav">Solutions</a>
@@ -93,7 +93,7 @@
     </section>
     <section class="join-page">
     <h2>Ready to join?</h2><br>
-    <a href="userregistration.html"><button class="join">Join Now</button></a>
+    <a href="/views/userregistration.handlebars"><button class="join">Join Now</button></a>
 </section>
 <div class="footer-link">
 <section >  
