--- a/static/css/roomlisting.css
+++ b/static/css/roomlisting.css
@@ -4,19 +4,6 @@
 body{
     background-color: #dcE8f4;
 }
-/*header*/
-header{
-    background-color: #f0f6cc;
-    height: 3rem;
-}
- .nav{
-    margin-top:8rem;
-    font-size: 2rem;
-    color:black;
-    text-decoration-line: none;
-    text-align: right;
-    padding-left: 10rem;
- }/*section*/
 .header{
       display: grid;
       grid-template-columns: 2fr 2fr 1fr;
@@ -28,7 +15,7 @@ i{
     padding-bottom: 2rem;
     text-align: center;    
  }
- section{
+ .image-display{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
  }
