--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,12 @@
 *{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }/*section*/
-section{
-      display: grid;
-      grid-template-columns: 2fr 2fr 1fr;
+
+.navigation{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
+
 i{ 
     margin-top: 1rem;
     padding-left: 4rem;
@@ -34,7 +36,7 @@ i{
     color:black;
     text-decoration-line: none;
     text-align: right;
-    padding-left: 8rem;
+    padding-left: 6rem;
  }
  p{
      margin-top: 5rem;
