--- a/views/roomlisting.handlebars
+++ b/views/roomlisting.handlebars
@@ -7,34 +7,9 @@
     <script src="https://kit.fontawesome.com/e6cf7acf81.js" crossorigin="anonymous"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-</head>
-<body>
-    <section class="header">
-        <div>
-        <i class="fas fa-phone-alt"> 456-908-8976</i>
-        </div>
-        <div>
-        <i class="fas fa-envelope-open-text"> airbnb@gmail.com</i>
-        </div>
-        <div>
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-invision"></i>
-        </div>
-    </section>
-    <header class="head">  
-        <div> 
-            <a href="roomlisting.html" class="nav">Room Listing</a>
-            <a href="#" class="nav">Product</a>
-            <a href="#" class="nav">Gallery</a>
-            <a href="#" class="nav">Solutions</a>
-            <a href="#" class="nav">Resources</a>
-            <a href="#" class="nav">Contact Us</a>
-       </div>
     </header> 
     <h1> Top places to stay in Toronto</h1>
-    <section>
+    <section class="image-display">
     <div>
         <img src="/images/T1.jpeg">
         <p>Seahell house [Etobicoke]</p>
@@ -51,7 +26,7 @@
         <h5>$393 CAD/Night</h5>
     </div>
     </section>
-    <section>
+    <section class="image-display">
     <div>
         <img src="/images/T4.jpg">
         <p>Seahell house [Markham]</p>
@@ -68,7 +43,7 @@
         <h5>$654 CAD/Night </h5>
     </div>
 </section>
-<section>
+<section class="image-display">
     <div>
         <img src="/images/T7.jpeg">
         <p>Mashroom Doom house [vaughan]</p>
@@ -85,43 +60,6 @@
         <h5>$134 CAD/Night </h5>
     </div>
 </section>
-<div class="footer-link">
-    <section >  
-      <ul>
-        <li><a href="#">Career</a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Policies</a></li>
-      </ul>
-    </section>
-      <section >  
-      <ul>
-        <li><a href="#">Trust and Safety </a></li>
-        <li><a href="#">Travel Credit</a></li>
-        <li><a href="#">Airbnb Citizen</a></li>
-      </ul>
-    </section>
-      <section>  
-      <ul>
-        <li><a href="#">Business Travel</a></li>
-        <li><a href="#">1-click Setting</a></li>
-        <li><a href="#">Help</a></li>
-      </ul>  
-    </section>  
-    <section>  
-        <ul>
-          <li><a href="#">Business</a></li>
-          <li><a href="#">click Setting</a></li>
-          <li><a href="#">Help ID</a></li>
-        </ul>  
-      </section> 
-    <section >  
-      <ul>
-        <li><a href="#">Terms of Use</a></li>
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Accessibility Policy</a></li>
-      </ul>
-    </section>    
-    </div>
-    <p>&copy; Copyright, 1991.</p>
+
 </body>
 </html>
