--- a/static/css/userregistration.css
+++ b/static/css/userregistration.css
@@ -61,7 +61,7 @@ button:hover {
 /* Add padding to container elements */
 .container {
   width: 100%;
-  padding: 16px;
+  /* padding: 16px; */
 }
 
 /* Clear floats */
@@ -72,8 +72,24 @@ button:hover {
 }
 
 /* Change styles for cancel button and signup button on extra small screens */
-@media screen and (max-width: 300px) {
+@media screen and (max-width: 700px) {
+  input[type=text], input[type=password] {
+    width: 100%;
+    display: inline-block;
+    border: none;
+    background: #f1f1f1;
+  } 
+  .container {
+    width: 100%;
+    margin-left: -2em;
+    /* padding: 16px; */
+  } 
   .cancelbtn, .signupbtn {
     width: 100%;
+    margin: 0.5em;
+    padding-bottom: 1.5em;
+  }
+  .statement{
+    font-size: 1rem;
   }
 }
