--- a/views/userregistration.handlebars
+++ b/views/userregistration.handlebars
@@ -13,10 +13,9 @@
 
     {{/each}}
 
-    <form style="border:1px solid #ccc" action="/sendMessage">
+    <form action="/sendMessage">
         <div class="container">
           <h1>Sign Up</h1>
-          <p>Please fill in this form to create an account.</p>
           <hr>
           <label for="Name"><b>Name</b></label>
           <input type="text" placeholder="Enter Name" name="Name">
@@ -71,7 +70,7 @@
             <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
           </label>
       
-          <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+          <p class="statement">By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
           <div class="clearfix">
             <button type="button" class="cancelbtn">Cancel</button>
