--- a/static/css/roomlisting.css
+++ b/static/css/roomlisting.css
@@ -32,9 +32,8 @@ i{
      font-size: 1.2rem;
      color: #a385E2;
  }
- h5{
-    margin-top: 0.5em;
-    text-align: center;
+ h5{margin-top: 0.5em;
+     text-align: center;
     color: #f2a3f2;
  }
  /*footer*/
