--- a/views/roomlisting.handlebars
+++ b/views/roomlisting.handlebars
@@ -9,6 +9,7 @@
     <title>Document</title>
     </header> 
     <h1> Top places to stay in Toronto</h1>
+    <h4> More than 100 Places out of 5 star</h4>
     <section class="image-display">
     <div>
         <img src="/images/T1.jpeg">
