--- a/static/css/style.css
+++ b/static/css/style.css
@@ -203,7 +203,7 @@ li{
     color:white;
     text-decoration-line: none;
     text-align: right;
-    padding-right: 2rem;
+    padding-left: 2em;
  }
  p{
      margin-top: 5rem;
