--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,14 +6,11 @@
     <script src="https://kit.fontawesome.com/e6cf7acf81.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="/css/login.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Login </title>
     </head>
     <body>
    <div id="id01" class="modal">
-  <span onclick="document.getElementById('id01').style.display='none'"
-class="close" title="Close Modal">&times;</span>
-
-  <!-- Modal Content -->
+  <span onclick="document.getElementById('id01').style.display='none'"class="close" title="Close Modal">&times;</span>
   <form style="border:2px solid #ccc">
   <div class="container">
       <label for="uname"><b>Username</b></label>
@@ -26,7 +23,7 @@ class="close" title="Close Modal">&times;</span>
             <button type="button" class="signupbtn">Login</button>
             <button type="submit" class="cancelbtn">Cancle</button>
           </div>
-      <span class="psw">Forgot <a href="#">password?</a></span>
+      <span>Forgot <a href="#">password?</a></span>
     </div>
   </form>
 </div>
