--- a/views/roomlisting.handlebars
+++ b/views/roomlisting.handlebars
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/roomlisting.css">
     <script src="https://kit.fontawesome.com/e6cf7acf81.js" crossorigin="anonymous"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>{{title}}</title>
     </header> 
     <h1> Top places to stay in Toronto</h1>
     <h4> More than 100 Places out of 5 star</h4>
