--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,62 +1,64 @@
-
-.modal {
-  display: none; 
-  position: fixed; 
-  z-index: 1; 
-  left: 0;
-  top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.4); 
-  padding-top: 60px;
+/* Bordered form */
+form {
+  border: 2px solid #f1f1f1;
+  padding: 2.5rem;
+}
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
 }
 
-.modal-content {
-  background-color: #fefefe;
-  margin: 5px auto; 
-  border: 1px solid #888;
-  width: 80%; 
-}
 button {
   background-color: #4CAF50;
   color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 50%;
-  opacity: 0.9;
+  height: 3rem;
+  text-align: center;
 }
+
 button:hover {
-  opacity:1;
+  opacity: 0.8;
 }
+
 .cancelbtn {
-  padding: 14px 14px;
   background-color: #f44336;
+  height: 3rem;
+  text-align: center;
 }
-.cancelbtn, .signupbtn {
+
+.container {
+  padding: 16px;
+}
+span.psw {
   float: left;
-  width: 50%;
+  padding-top: 16px;
 }
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-.animate {
-  -webkit-animation: animatezoom 0.6s;
-  animation: animatezoom 0.6s
-}
-
-@-webkit-keyframes animatezoom {
-  from {-webkit-transform: scale(0)}
-  to {-webkit-transform: scale(1)}
-}
-
-@keyframes animatezoom {
-  from {transform: scale(0)}
-  to {transform: scale(1)}
+@media screen and (max-width: 700px) {
+  input[type=text], input[type=password] {
+    width: 100%;
+    display: inline-block;
+    border: none;
+    background: #f1f1f1;
+  } 
+  .container {
+    width: 100%;
+    margin-left: -2em;
+    /* padding: 16px; */
+  } 
+  .cancelbtn {
+    margin: 0.5em;
+    padding-bottom: 1.5em;
+    height: 2.5em;
+  }
+  span.psw {
+    display: block;
+    float: none;
+  }
+  button{
+    margin-right: 0.5rem;
+    height: 2.5em;
+  }
 }
