--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -57,7 +57,7 @@
     </section>
     <section class="join-page">
     <h2>Ready to join?</h2><br>
-    <a href="userregistration"><button class="join">Join Now</button></a>
-    <a href="login"><button class="join" onclick="document.getElementById('id01').style.display='block'">Login</button></a>
+    <a href="/userregistration"><button class="join">Join Now</button></a>
+    <a href="/login"><button class="join">Login</button></a>
 
 </section>
