--- a/views/userregistration.handlebars
+++ b/views/userregistration.handlebars
@@ -6,7 +6,7 @@
     <script src="https://kit.fontawesome.com/e6cf7acf81.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="/css/userregistration.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>{{title}}</title>
     {{#each messages}}
 
     <div class="errors">{{this}}</div>
