--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,11 +29,12 @@
         </div> 
         <div> 
             <a href="/home" class="nav">Home </a>
-            <a href="/roomlisting" class="nav">Room Listing</a>
+            <a href="/roomlisting" class="nav">Explore</a>
             <a href="#" class="nav">Product</a>
             <a href="#" class="nav">Gallery</a>
             <a href="#" class="nav">Solutions</a>
             <a href="#" class="nav">Resources</a>
+            <a href="#" class="nav">Contact</a>
        </div>
            <p>Live the wonderful life</p>
     </header> 
