--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
     <script src="https://kit.fontawesome.com/e6cf7acf81.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>AirBnB</title>
+    <title>{{title}}</title>
 </head>
 <body>
     <section class="navigation">
