--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,7 +11,7 @@
     <body>
   <form method="post">
   <div class="container">
-    <h1>Login Here To enjoy your Tour</h1>
+    <h1>Login with <a href="#" class="link">Facebook</a> Either <a href="#" class="link">Google</a> </h1>
     <label for="uname"><b>Username</b></label>
     <input type="text" placeholder="Enter Username" name="uname">
 
@@ -21,7 +21,7 @@
     <button type="submit">Login</button>
     <button type="button" class="cancelbtn">Cancel</button>
     <label>
-      <span class="psw">Forgot <a href="#">password?</a></span>
+      <span class="psw">Forgot <a href="#" class="link">password?</a></span>
     </label>
   </div>
 </form>
