--- a/static/css/style.css
+++ b/static/css/style.css
@@ -128,6 +128,10 @@ h1{
     font-size: 2rem;
     text-decoration-line: underline;
 }
+.checked {
+    color: orange;
+    padding-left: 1em;
+  }
 /*join*/
 .join-page{
     background-image: url(../img/room.jpg);
