--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -30,13 +30,14 @@
         <h1 class="info">Places to stay in Canada</h1>
         <h5>4.5 out of 5stars with 7,00,0000+reviews</h5>
             <img src="/img/room1.jpeg" alt="Room-1">
-            <p class="bio">This was my second time stay at Emil's and it was a great experience this time too. The room was clean and bright, well appointed</p>
+            <p class="bio">This was my second time stay at Emil's and it was a great experience this time too. The room was clean and bright, well appointed.Great customer service and well good experience.Reasonable and clean.</p>
             <img src="/img/boy.jpg" alt="boy" class="rating-view">  Matthew ,Canada
-            <i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i>
+            <span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span>
+
             <img src="/img/room 2.jpg" alt="Room-2">
             <p class="bio">We had a perfect host, a perfect location in the city, friendly and very quiet and friendly neighbourhood.Very good host and amazing house!!! Tammy was very friendly and have a really nice familly! The bedroom was exactly as the pictures</p>
             <img src="/img/girl.jpg" alt="boy" class="rating-view">  Elley ,Canada
-            <i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i>
+        <span class="fa fa-star checked"><span class="fa fa-star checked"><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span>
         </div>
     </section>
     <section class="Information">
