--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,6 +12,7 @@
   <form method="post">
   <div class="container">
     <h1>Login with <a href="#" class="link">Facebook</a> Either <a href="#" class="link">Google</a> </h1>
+    <h1>Don't have an account? <a href="/userregistration" class="link">Sign Up Here</a></h1>
     <label for="uname"><b>Username</b></label>
     <input type="text" placeholder="Enter Username" name="uname">
 
