--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
     </section>
     <header class="head">  
         <div>
-            <img src="../img/logo.jpg" class="logo">
+            <img src="../img/logo.png" class="logo">
         </div> 
         <div> 
             <a href="/home" class="nav">Home </a>
