--- a/views/userregistration.handlebars
+++ b/views/userregistration.handlebars
@@ -13,7 +13,7 @@
 
     {{/each}}
 
-    <form action="/sendMessage">
+    <form action="/sendMessage" method="POST">
         <div class="container">
           <h1>Sign Up</h1>
           <hr>
