--- a/views/userregistration.handlebars
+++ b/views/userregistration.handlebars
@@ -17,8 +17,8 @@
         <div class="container">
           <h1>Sign Up</h1>
           <hr>
-          <label for="Name"><b>Name</b></label>
-          <input type="text" placeholder="Enter Name" name="Name">
+          <label><b>Name</b></label>
+          <input type="text" placeholder="Enter Name" name="FirstName" class="frst">
 
           <label for="email"><b>Address</b></label>
           <input type="text" placeholder="Enter Address" name="Address">
@@ -68,8 +68,7 @@
           <p class="statement">By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
           <div class="clearfix">
             <button type="button" class="cancelbtn">Cancel</button>
-            <button type="submit" class="signupbtn">Sign Up</button>
-          </div>
+            <button type="submit" class="signupbtn">SIGN UP </button>
         </div>
       </form>
 </body>
