--- a/static/css/roomlisting.css
+++ b/static/css/roomlisting.css
@@ -19,6 +19,9 @@ i{
     margin-top: 0.5em;
     text-align: center;
  }
+ h5:hover{
+     color: blue;
+ }
  .image-display{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -105,8 +108,8 @@ li{
         grid-template-columns: 1fr;
      }
      img{
-        height: 20rem;
-        width: 30rem;
+        height: 30rem;
+        width: 55rem;
         margin: auto ;
         padding: auto;
         display: block;
@@ -114,7 +117,7 @@ li{
     .nav{
         margin-top:8rem;
         margin-left: 0.5em;;
-        font-size: 1rem;
+        font-size: 1.3rem;
         color:black;
         text-decoration-line: none;
         text-align: right;
