--- a/views/roomlisting.handlebars
+++ b/views/roomlisting.handlebars
@@ -13,61 +13,160 @@
 <section class="image-display">
     <div>
         <img src="/images/T1.jpeg">
-        <p>Seahell house [Etobicoke]</p>
-        <h5>$393 CAD/Night</h5>
-        <h3>4.6<span class="fa fa-star checked"></span></h3>
+        {{#each products}}
+    <div>
+        <p>
+              Title:  {{this.title}}
+        </p>
+        <p>
+                Description : {{this.price}}
+        </p>
+        <p>
+                Price : {{this.rating}}
+        </p>
+
+    </div>
+{{/each}}
     </div>
     <div>
         <img src="/images/T2.jpeg">
-        <p>Romatic Cabine House [DownTown]</p>
-        <h5>$293 CAD/Night</h5>
-        <h3>4.0<span class="fa fa-star checked"></span></h3>
+      {{#each products}}
+    <div>
+        <p>
+              Title:  {{this.title}}
+        </p>
+        <p>
+                Description : {{this.price}}
+        </p>
+        <p>
+                Price : {{this.rating}}
+        </p>
+
+    </div>
+{{/each}}
     </div>
     <div>
         <img src="/images/T3.jpeg">
-        <p>New York house [DownTown]</p>
-        <h5>$393 CAD/Night</h5>
-        <h3>4.7<span class="fa fa-star checked"></span></h3>
+          {{#each products}}
+    <div>
+        <p>
+              Title:  {{this.title}}
+        </p>
+        <p>
+                Description : {{this.price}}
+        </p>
+        <p>
+                Price : {{this.rating}}
+        </p>
+
+    </div>
+{{/each}}
     </div>
 </section>
 <section class="image-display">
     <div>
         <img src="/images/T4.jpg">
-        <p>Seahell house [Markham]</p>
-        <h5>$300 CAD/Night </h5>
-        <h3>4.9<span class="fa fa-star checked"></span></h3>
+          {{#each products}}
+    <div>
+        <p>
+              Title:  {{this.title}}
+        </p>
+        <p>
+                Description : {{this.price}}
+        </p>
+        <p>
+                Price : {{this.rating}}
+        </p>
+
+    </div>
+{{/each}}
     </div>
     <div>
         <img src="/images/T5.jpg">
-        <p>Tree house [Etobicoke]</p>
-        <h5>$234 CAD/Night</h5>
-        <h3>4.8<span class="fa fa-star checked"></span></h3>
+          {{#each products}}
+    <div>
+        <p>
+              Title:  {{this.title}}
+        </p>
+        <p>
+                Description : {{this.price}}
+        </p>
+        <p>
+                Price : {{this.rating}}
+        </p>
+
+    </div>
+{{/each}}
     </div>
     <div>
         <img src="/images/T6.jpeg">
-        <p>Cottage house [Habourfront Side]</p>
-        <h5>$654 CAD/Night </h5>
-        <h3>4.4<span class="fa fa-star checked"></span></h3>
+          {{#each products}}
+    <div>
+        <p>
+              Title:  {{this.title}}
+        </p>
+        <p>
+                Description : {{this.price}}
+        </p>
+        <p>
+                Price : {{this.rating}}
+        </p>
+
+    </div>
+{{/each}}
     </div>
 </section>
 <section class="image-display">
     <div>
         <img src="/images/T7.jpeg">
-        <p>Mashroom Doom house [vaughan]</p>
-        <h5>$234 CAD/Night </h5>
-        <h3>4.3<span class="fa fa-star checked"></span></h3>
+          {{#each products}}
+    <div>
+        <p>
+              Title:  {{this.title}}
+        </p>
+        <p>
+                Description : {{this.price}}
+        </p>
+        <p>
+                Price : {{this.rating}}
+        </p>
+
+    </div>
+{{/each}}
     </div>
     <div>
         <img src="/images/T8.jpeg">
-        <p>Seahell house [DownTown]</p>
-        <h5>$134 CAD/Night </h5>
-        <h3>4.6<span class="fa fa-star checked"></span></h3>
+          {{#each products}}
+    <div>
+        <p>
+              Title:  {{this.title}}
+        </p>
+        <p>
+                Description : {{this.price}}
+        </p>
+        <p>
+                Price : {{this.rating}}
+        </p>
+
+    </div>
+{{/each}}
     </div>
     <div>
         <img src="/images/T2.jpeg">
-        <p>Down hall house [Etobicoke]</p>
-        <h5>$134 CAD/Night </h5>
-        <h3>4.5<span class="fa fa-star checked"></span></h3>
+          {{#each products}}
+    <div>
+        <p>
+              Title:  {{this.title}}
+        </p>
+        <p>
+                Description : {{this.price}}
+        </p>
+        <p>
+                Price : {{this.rating}}
+        </p>
+
+    </div>
+{{/each}}
     </div>
 </section>
 
